# gpui-ce

./: Cargo.toml  audit.toml  justfile
crates/gpui/: Cargo.toml
crates/gpui/examples/learn/: blur.rs
crates/gpui/examples/legacy/: opacity.rs  window.rs
crates/gpui/src/: app.rs  bounds_tree.rs  gpui.rs  keymap.rs  platform.rs  scene.rs  style.rs  styled.rs  window.rs
crates/gpui/src/elements/: surface.rs
crates/gpui_linux/: Cargo.toml
crates/gpui_linux/src/linux/: platform.rs
crates/gpui_linux/src/linux/wayland/: client.rs  scroll.rs  window.rs
crates/gpui_linux/src/linux/x11/: client.rs  window.rs
crates/gpui_macos/src/: metal_renderer.rs  shaders.metal
crates/gpui_web/src/: dispatcher.rs
crates/gpui_wgpu/src/: shaders.wgsl  wgpu_renderer.rs
crates/gpui_windows/: build.rs
crates/gpui_windows/src/: directx_renderer.rs  shaders.hlsl  window.rs
scripts/sync-upstream/: README.md  fix-build.prompt.md  resolve-conflicts.prompt.md  state.json  sync-upstream.sh  sync_upstream.py
